<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="page_number">P: %1$s</string>
    <string name="chapter_number">Ch: %1$s</string>
    <string name="book_bookmarks">Book Bookmarks</string>
    <string name="font_size">Font size</string>
    <string name="adjust_font_size">Adjust font size</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="choose_a_theme">Choose a theme</string>
    <string name="search_placeholder">Search...</string>
    <string name="clear">Clear</string>
    <string name="navigate_back">navigate back</string>
    <string name="search">Search</string>
    <string name="theme_item_string">Aa</string>
    <string name="bookmark_placeholder">Ex. New</string>
    <string name="bookmark_dialog_name">Name:</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="default_new_bookmark_name">New</string>
    <string name="page_not_found">Page not found</string>
    <string name="image_not_available">Image not available</string>
    <string name="full_screen_image">Full screen image</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="add_custom_theme">Add Custom Theme</string>


    <string name="bookmark_icon" translatable="false">🏷️</string>
    <string name="green_highlight_icon" translatable="false">🟢</string>
    <string name="yellow_highlight_icon" translatable="false">🟡</string>
    <string name="orange_highlight_icon" translatable="false">🟠</string>
    <string name="blue_highlight_icon" translatable="false">🔵</string>
    <string name="note_icon" translatable="false">📝</string>
    <string name="copy_icon" translatable="false">➢</string>
    <string name="remove_highlight_icon" translatable="false">✖️</string>


</resources>